[BUGFIX] Wrong alignment of French labels for login screen
Since the username label changed from "Utilisateur" to "Nom d'utilisateur"
in French, the alignment of labels and text fields is broken.

Fixes: #30688
Releases: 4.5,4.6

--- a/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
@@ -105,6 +105,10 @@ body#typo3-index-php #t3-login-form-fields {
 	padding: 14px 0 5px 30px;
 }
 
+body#typo3-index-php #t3-login-password-section {
+	clear: left;
+}
+
 body#typo3-index-php #t3-interfaceselector {
 	width: 198px;
 }
